2008-03-04 Thomas Perl <thpinfo.com>
	* Initial Version

2008-03-17 Thomas Perl <thpinfo.com>
	* Release version 1.0

2008-03-20 Lukas Vana <fabian@fabian.cz>
	* Add support for error handling missing URLs
	* Notify users when NEW sites appear
	* Option "display_errors" can be set in watch.py

2008-03-22 Thomas Perl <thpinfo.com>
	* Release version 1.1

2008-05-09 Lukas Upton <hagakure1@gmail.com>
	* Fix problem with Mac OS X 10.5.2 and Ubuntu 8.04

2008-05-10 Thomas Perl <thpinfo.com>
	* Release version 1.2

2008-05-15 Craig Hoffman <craig.hoffmann@gmail.com>
	* Add support for sending a User-Agent header

2008-05-16 Thomas Perl <thpinfo.com>
	* Release version 1.3

2008-11-14 Thomas Perl <thpinfo.com>
	+ Add example for using HTML Tidy (needs python-utidylib)
	+ Add example for using the ical2txt module (needs python-vobject)
	+ Add ical2txt.py module for converting ics to plaintext
	* More comments in hooks.py for better user documentation
	* Release version 1.4

2008-11-18 Thomas Perl <thp@thpinfo.com>
	* Support for installing into the system
	* Use ~/.urlwatch/ for config, cache and hooks
	* Apply BSD license
	* Add setup.py (and remove makefile)
	* Command-line options
	* Verbose logging mode
	* Example urls.txt and hooks.py
	* Update README
	* Add manpage (urlwatch.1)
	* Release version 1.5

2008-12-23 Thomas Perl <thp@thpinfo.com>
	* Use hashlib in Python 2.5 and above for SHA-1 generation
	* Release version 1.6

2009-01-03 Thomas Perl <thp@thpinfo.com>
	* Add urlwatch.html2txt module to convert/format HTML to plaintext
	* Add example of using html2txt in the example hooks file
	* The html-to-plaintext feature has been suggested by Evert Meulie
	* Release version 1.7
